--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,12 @@
 </head>
 <body>
 <!-- форма для отправки сообщений -->
+<div>
 <form name="publish">
     <input type="text" name="message">
     <input type="submit" value="Отправить">
 </form>
-
+</div>
 <!-- здесь будут появляться входящие сообщения -->
 <div id="subscribe"></div>
 
